# metr4202_ximea_ros

./: CMakeLists.txt  README.md
include/ximea_cv/: ximea_cv.hpp
src/: ximea_demo.cpp
ximea_color/: CMakeLists.txt  package.xml
ximea_color/launch/: ximea_aruco.launch
ximea_color/src/: example_camera.py  ximea_color_detect.cpp
ximea_ros/: CMakeLists.txt  package.xml
ximea_ros/include/ximea_cv/: ximea_ros.hpp
ximea_ros/launch/: ximea_aruco.launch
ximea_ros/src/: ximea_demo.cpp  ximea_ros.cpp
